# etu-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: utils.cmake
examples/: CMakeLists.txt
examples/01-hello-triangle/: CMakeLists.txt  fs.glsl  main.cpp  vs.glsl
examples/02-texture/: CMakeLists.txt  fs.glsl  main.cpp  vs.glsl
examples/03-ncubes/: CMakeLists.txt  fs.glsl  main.cpp  vs.glsl
examples/04-mesh-loading/: CMakeLists.txt  fs.glsl  main.cpp  vs.glsl
examples/05-materials/: CMakeLists.txt  fs.glsl  main.cpp  vs.glsl
examples/05-materials/assets/backpack/: backpack.mtl
examples/05-materials/assets/cyborg/: cyborg.mtl
examples/05-materials/assets/donats/: donats.mtl
examples/05-materials/assets/donut/: scene_test.mtl
include/: Buffers.hpp  Camera.hpp  Model.hpp  Program.hpp  Shader.hpp  Texture.hpp  Types.hpp  VertexArray.hpp  VertexLayout.hpp  Window.hpp
shaders/: phong_model.glsl  uniforms.glsl
src/: Camera.cpp  Model.cpp  Program.cpp  Texture.cpp  VertexArray.cpp  VertexLayout.cpp  Window.cpp
